--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,42 @@
 {
-    "name": "rszrama/negotiation-middleware",
+    "name": "cn-tools/negotiation-middleware",
     "type": "library",
-    "description": "Content negotiation middleware for PHP applications using a request, response, and next callable signature.",
+    "description": "Content negotiation middleware for Slim v4 / PSR-15.",
     "keywords": ["negotiation", "middleware", "slim"],
-    "homepage": "https://github.com/rszrama/negotiation-middleware",
+    "homepage": "https://github.com/cn-tools/negotiation-middleware",
     "license": "MIT",
     "authors": [
         {
-            "name": "Ryan Szrama",
-            "email": "ryan.szrama@gmail.com",
-            "homepage": "http://ryanszrama.com/"
+            "name": "Clemens Neubauer",
+            "email": "cn-tools@gmx.at",
+            "homepage": "https://github.com/cn-tools"
         }
     ],
+    "config": {
+        "sort-packages": true
+    },
     "require": {
-        "php": ">=5.4.0",
-        "psr/http-message": "1.0",
-        "willdurand/negotiation": "2.0.0-alpha1"
+        "php": ">=8.0",
+        "psr/http-message": "^1.0 || ^2.0",
+        "psr/http-server-middleware": "^1.0",
+        "willdurand/negotiation": "^3.0",
+        "psr/http-server-handler": "^1.0"
     },
     "autoload": {
         "psr-4": {
-            "NegotiationMiddleware\\": "src/"
+            "CNTools\\NegotiationMiddleware\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "CNTools\\NegotiationMiddleware\\": "tests"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "nyholm/psr7": "^1.8"
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
